fix overflow on mobile

--- a/component/Hero/Hero.module.css
+++ b/component/Hero/Hero.module.css
@@ -61,9 +61,6 @@
 }
 
 @media screen and (max-width: 768px) {
-  .root {
-    margin-top: 2em;
-  }
   .root,
   .hero,
   .heroWrap {
